gccida/g2/mergeable_constant_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/varasm.c:1163:35: error: must use 'enum' tag to refer to type 'machine_mode'
void  mergeable_constant_section( machine_mode mode, unsigned __int64 align, unsigned int flags) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/varasm.c:1177:11: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
else if ( in_section_0 != in_const ) 
          ^~~~~~~~~~~~
          in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/varasm.c:1180:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mergeable_constant_section/src/obj/varasm.o] Error 1
